--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <h1>My First Static Web App</h1>
     	<h1>My Name: Jakkapong Karndee</h1>
         <p>ID: 6222782714</p>
-        <h1>My country: Thailand</h1>
+        <img src="https://graduateadmissions.siit.tu.ac.th/plugin/img/siitlogo.png" alt="">
     </body>
 </html>
