--- a/src/check4.html
+++ b/src/check4.html
@@ -3,8 +3,8 @@
     <body>
 
       <h1>Welcome to DES424: Check Point 4</h1>
-      <p>My Name: Your Name</p>
-      <p>My ID: Your ID</p>
+      <p>My Name: Jakkapong Karndee</p>
+      <p>My ID: 6222782714</p>
       <p>Host: <MY_HOST></p>
     </body>
   </html>
